--- a/HeptaCreate/index.html
+++ b/HeptaCreate/index.html
@@ -124,7 +124,7 @@
                                 <button class="btn btn-outline-dark align-center cajaLetra" type="button" id="letraO1"
                                     onkeydown="letraInput(event, false, 1)"></button>
                                 <button class="btn btn-outline-dark align-center cajaLetra" type="button" id="letraO2"
-                                    onkeydown="letraInput(event, false, 2)"></button>
+                                    contenteditable virtualkeyboardpolicy="manual" onkeydown="letraInput(event, false, 2)"></button>
                                 <button class="btn btn-outline-dark align-center cajaLetra" type="button" id="letraO3"
                                     onkeydown="letraInput(event, false, 3)"></button>
                                 <button class="btn btn-outline-dark align-center cajaLetra" type="button" id="letraO4"
